Adapter injected and displaying data

--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -5,73 +5,56 @@
   android:layout_height="wrap_content"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
-  android:padding="@dimen/half_dynamic_spacing"
-  android:layout_margin="@dimen/half_dynamic_spacing"
+  android:padding="@dimen/half_static_spacing"
+  android:layout_margin="@dimen/half_static_spacing"
   android:clickable="true"
   android:focusable="true"
-  android:background="?attr/selectableItemBackground">
+  android:background="?attr/selectableItemBackground"
+  app:cardCornerRadius="@dimen/half_static_spacing"
+  app:cardElevation="@dimen/half_static_spacing">
 
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="@dimen/half_dynamic_spacing"
+    >
 
-    <com.google.android.material.textfield.TextInputLayout
-      android:id="@+id/title_layout"
+    <TextView
+      android:id="@id/title"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_margin="@dimen/half_dynamic_spacing"
-      app:hintEnabled="true"
-      app:hintAnimationEnabled="true"
-      app:layout_constraintStart_toStartOf="parent"
+      android:layout_margin="@dimen/half_static_spacing"
+      style="@style/ListItemTitle"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintEnd_toStartOf="@+id/created"
-      app:layout_constraintHorizontal_weight="@integer/title_weight">
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toStartOf="@id/created"
+      app:layout_constraintHorizontal_weight="@integer/title_weight"
+      tools:text="some note title"/>
 
-      <com.google.android.material.textfield.TextInputEditText
-        android:id="@id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:hint="@string/title_hint"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
       android:id="@+id/created"
       android:layout_width="0dp"
-      android:layout_margin="@dimen/half_dynamic_spacing"
+      android:layout_margin="@dimen/half_static_spacing"
       android:layout_height="wrap_content"
-      app:layout_constraintBaseline_toBaselineOf="@id/title_layout"
-      app:layout_constraintStart_toEndOf="@id/title_layout"
+      app:layout_constraintBaseline_toBaselineOf="@id/title"
+      app:layout_constraintStart_toEndOf="@id/title"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_weight="@integer/created_weight"/>
 
-    <com.google.android.material.textfield.TextInputLayout
-      android:id="@+id/description_layout"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_margin="@dimen/half_dynamic_spacing"
-      app:hintEnabled="true"
-      app:hintAnimationEnabled="true"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/title_layout"
-      app:layout_constraintEnd_toStartOf="@id/thumbnail"
-      app:layout_constraintHorizontal_weight="@integer/title_weight">
-
-
-
-      <com.google.android.material.textfield.TextInputEditText
+      <TextView
         android:id="@+id/description"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
+        android:layout_margin="@dimen/half_static_spacing"
         android:minLines="@integer/min_description_lines"
         android:maxLines="@integer/max_description_lines"
-        android:hint="@string/description_hint"
-        tools:text="a Series of complicated description."
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintEnd_toStartOf="@id/thumbnail"
+        app:layout_constraintHorizontal_weight="@integer/title_weight"
+        tools:text="a Series of complicated descriptions."
         />
-
-    </com.google.android.material.textfield.TextInputLayout>
 
     <ImageView
       android:id="@+id/thumbnail"
@@ -79,11 +62,11 @@
       android:layout_height="wrap_content"
       android:scaleType="fitCenter"
       android:adjustViewBounds="true"
-      android:layout_marginHorizontal="@dimen/half_dynamic_spacing"
-      android:layout_marginBottom="@dimen/half_dynamic_spacing"
+      android:layout_marginHorizontal="@dimen/half_static_spacing"
+      android:layout_marginBottom="@dimen/half_static_spacing"
       android:layout_marginTop="0dp"
-      app:layout_constraintStart_toEndOf="@id/description_layout"
-      app:layout_constraintTop_toTopOf="@id/description_layout"
+      app:layout_constraintStart_toEndOf="@id/description"
+      app:layout_constraintTop_toTopOf="@id/description"
       app:layout_constraintEnd_toEndOf="parent"
       tools:src="@android:drawable/gallery_thumb"
       app:layout_constraintHorizontal_weight="@integer/created_weight"
