--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,7 @@
     <!-- TODO Customize your theme here. -->
   </style>
 
+  <style name="ListItemTitle" parent="TextAppearance.Material3.TitleMedium">
+    <!-- TODO -->
+  </style>
 </resources>
