Edit details fragment in progress

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -2,17 +2,75 @@
 <androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
-  android:layout_height="match_parent">
+  android:layout_height="match_parent"
+  xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-<!--  TODO Define textview Widgets for read-only display of title and description.-->
+  <!--  TODO Define textview Widgets for read-only display of title and description.-->
 
-<!--  TODO Define TextView widgets for display of crated and modified dates.-->
+  <!--  TODO Define TextView widgets for display of crated and modified dates.-->
 
-<!--  TODO Define text input layout /editText pairs for editable title and description.-->
+  <!--  TODO Define text input layout /editText pairs for editable title and description.-->
 
-<!--  TODO Define ListView Widgets for Images.-->
+  <ImageView
+    android:id="@+id/edit_button"
+    android:layout_width="@dimen/edit_button_size"
+    android:layout_height="@dimen/edit_button_size"
+    android:contentDescription="@string/edit_note_description"
+    android:src="@drawable/edit_note"
+    android:background="?attr/selectableItemBackgroundBorderless"
+    android:layout_margin="@dimen/half_dynamic_spacing"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintBottom_toTopOf="@id/images"
+    app:layout_constraintEnd_toStartOf="@id/add_photo"/>
 
-<!--  TODO Define Button or ImageButton widgets for edit/save/cancel actions.-->
+  <ImageButton
+    android:id="@+id/add_photo"
+    android:layout_width="@dimen/edit_button_size"
+    android:layout_height="@dimen/edit_button_size"
+    android:contentDescription="@string/add_photo_description"
+    android:src="@drawable/add_photo"
+    android:background="?attr/selectableItemBackgroundBorderless"
+    android:layout_margin="@dimen/half_dynamic_spacing"
+    android:visibility="gone"
+    app:layout_constraintStart_toEndOf="@id/edit_button"
+    app:layout_constraintBottom_toTopOf="@id/images"
+    app:layout_constraintEnd_toStartOf="@id/save_button"/>
+
+  <ImageButton
+    android:id="@+id/save_button"
+    android:layout_width="@dimen/edit_button_size"
+    android:layout_height="@dimen/edit_button_size"
+    android:contentDescription="@string/save_changes_description"
+    android:src="@drawable/save_changes"
+    android:background="?attr/selectableItemBackgroundBorderless"
+    android:layout_margin="@dimen/half_dynamic_spacing"
+    app:layout_constraintStart_toEndOf="@id/add_photo"
+    app:layout_constraintBottom_toTopOf="@id/images"
+    app:layout_constraintEnd_toStartOf="@id/cancel_button"/>
+
+  <ImageButton
+    android:id="@+id/cancel_button"
+    android:layout_width="@dimen/edit_button_size"
+    android:layout_height="@dimen/edit_button_size"
+    android:contentDescription="@string/cancel_description"
+    android:src="@drawable/cancel_edit"
+    android:background="?attr/selectableItemBackgroundBorderless"
+    android:layout_margin="@dimen/half_dynamic_spacing"
+    app:layout_constraintStart_toEndOf="@id/save_button"
+    app:layout_constraintBottom_toTopOf="@id/images"
+    app:layout_constraintEnd_toEndOf="parent"/>
+
+
+
+  <ListView
+    android:id="@+id/images"
+    android:layout_width="0dp"
+    android:layout_height="@dimen/thumbnail_list_height"
+    android:orientation="horizontal"
+    android:layout_marginTop="@dimen/half_dynamic_spacing"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
