--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
   <dimen name="half_dynamic_spacing">8dp</dimen>
   <dimen name="half_static_spacing">4dp</dimen>
+  <dimen name="edit_button_size">48dp</dimen>
+  <dimen name="thumbnail_list_height">60dp</dimen>
 </resources>
