Google SignIn integrated

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,25 +3,46 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/nav_graph"
-  app:startDestination="@id/list_fragment">
+  app:startDestination="@id/pre_login_fragment">
 
+  <fragment
+    android:id="@+id/pre_login_fragment"
+    android:name="edu.cnm.deepdive.notes.controller.PreLoginFragment"
+    tools:layout="@layout/fragment_pre_login">
 
+    <action
+      android:id="@+id/show_login"
+      app:destination="@id/login_fragment"
+      app:popUpTo="@id/nav_graph"/>
+
+    <action
+      android:id="@+id/show_list"
+      app:destination="@id/list_fragment"
+      app:popUpTo="@id/nav_graph"/>
+  </fragment>
+
+  <fragment
+    android:id="@+id/login_fragment"
+    android:name="edu.cnm.deepdive.notes.controller.LoginFragment"
+    android:label="Sign in to Notes"
+    tools:layout="@layout/fragment_login">
+    <action
+      android:id="@+id/show_list"
+      app:destination="@id/list_fragment"
+      app:popUpTo="@id/nav_graph"/>
+  </fragment>
   <fragment
     android:id="@+id/list_fragment"
     android:name="edu.cnm.deepdive.notes.controller.ListFragment"
     android:label="@string/list_fragment_name"
     tools:layout="@layout/fragment_list">
-
     <action
       android:id="@+id/show_details"
-      app:destination="@id/details_fragment">
-
-      <argument
-        android:name="note_id"
-        app:argType="long"/>
-
-    </action>
-
+      app:destination="@id/details_fragment"/>
+    <action
+      android:id="@+id/show_pre_login"
+      app:destination="@id/pre_login_fragment"
+      app:popUpTo="@id/nav_graph"/>
   </fragment>
 
   <fragment
@@ -36,6 +57,6 @@
 
   </fragment>
 
-<!--  TODO Add Silent sign-in, sign in, note detail and other req'd fragments and actions-->
+  <!--  TODO Add Silent sign-in, sign in, note detail and other req'd fragments and actions-->
 
 </navigation>
